feat: search protocol/reagent pages, duplicate guards, experiment edit, UI polish
- Fix JPA auditing null created_at/created_by (remove @ConditionalOnBean)
- Add duplicate creation guard for protocols (name + pairs) and reagents (name + manufacturer)
- Add GET /api/protocols/search and GET /api/reagent-catalogs/search endpoints
- Add PUT /api/experiments/{id} for full experiment editing
- Implement Search Protocols and Search Reagents frontend pages
- Refactor frontend: shared utils.py (CSS palette, auth, logo, sidebar, date formatting)
- Fix form submit button colour (primaryFormSubmit selector), multiselect green tags,
  delete button red via CSS :has(), date pickers replacing text inputs
- Reorder dashboard buttons and experiment signal fields
- Add confirmation dialog and edit form to Experiment Details page
- Tests: 110 passing (up from 99)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>